# seaorm-admin

./: .gitignore  Cargo.toml  README.md
admin_macro/: Cargo.toml
admin_macro/src/: lib.rs  model_admin.rs  parse.rs
examples/: create_test_model.rs
examples/axum/: Cargo.toml  docker-compose.override.yml  docker-compose.yml  initdb.sql
examples/axum/src/: main.rs
examples/entity/: Cargo.toml
examples/entity/src/: author.rs  lib.rs  post.rs  prelude.rs  tag.rs  tag_relation.rs  test_model.rs
examples/migration/: Cargo.toml
examples/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230421_000833_add_test.rs  m20230628_051557_add_tag.rs  m20230629_020856_add_unique.rs
examples/rocket/: Cargo.toml  docker-compose.yml  initdb.sql
examples/rocket/src/: main.rs
src/: admin.rs  axum_admin.rs  field.rs  filter.rs  json.rs  key.rs  lib.rs  parse.rs  rocket_admin.rs  templates.rs  tests.rs  widgets.rs
src/field/: checkbox_field.rs  date_time_field.rs  default_field.rs  enum_field.rs  foreign_key_field.rs  input_field.rs  many_to_many.rs  mod.rs  relation.rs  textarea_field.rs  timestamp_field.rs  tool.rs
templates/: auto-complete-handler.js  auto-complete.jinja  base-form.jinja  base.jinja  checkbox.jinja  clear-input-handler.js  create-form.jinja  datetime-input-handler.js  datetime-input.jinja  delete-form.jinja  form-field-text.jinja  form-submit-handler.js  index.jinja  input.jinja  list.jinja  pagination.jinja  relation-form-handler.js  relation-form.jinja  select.jinja  sidebar.jinja  textarea.jinja  update-form.jinja
tests/: macro_test.rs
tests/model/: mod.rs
