[package]
name = "seaorm-admin"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "admin_macro"]

[dependencies]
askama = "0.12.0"
async-trait = "0.1.68"
itertools = "0.10.5"
base-62 = "0.1.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95", default-features = false, optional = true }
admin_macro = { path = "./admin_macro" }
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "io-util"] }
rocket = { version = "=0.5.0-rc.3", default-features = false, optional = true }
bigdecimal = { version = "0.3", default-features = false, optional = true }
chrono = { version = "0.4.20", default-features = false, optional = true }
rust_decimal = { version = "1", default-features = false, optional = true }
time = { version = "0.3", default-features = false, optional = true }
uuid = { version = "1", default-features = false, optional = true }
log = "0.4.17"
env_logger = "0.10.0"
base64 = "0.21.0"


[dependencies.sea-orm]
version = "*"
features = [  "sqlx-postgres", "runtime-tokio-rustls", "macros", "mock", "debug-print" ]

[dev-dependencies]
seaorm-admin = { path = ".", features = ["full", "tests-cfg"] }

[features]
default = ["full"]
full = ["with-json", "with-chrono", "with-rust_decimal", "with-bigdecimal", "with-uuid", "with-time", "with-rocket"]
with-json = ["serde_json", "sea-orm/with-json"]
with-chrono = ["chrono", "sea-orm/with-chrono"]
with-rust_decimal = ["rust_decimal", "sea-orm/with-rust_decimal"]
with-bigdecimal = ["bigdecimal", "sea-orm/with-bigdecimal"]
with-uuid = ["uuid", "sea-orm/with-uuid"]
with-time = ["time", "sea-orm/with-time"]
with-rocket = ["rocket"]
tests-cfg = []

