[workspace]
# A separate workspace

[package]
name = "seaorm-admin-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
seaorm-admin = { path="../../", features=["default", "with-axum"] }
axum = { version = "^0.7" }
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "io-util"] }
env_logger = "0.10.0"
hyper = "*"

serde = {version = "*", features = ["derive"]}
serde_json ="*"

[dependencies.sea-orm]
version = "^1"
features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "mock", "debug-print" ]
